Refactor list initialization using Arrays.asList